--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.sources=src
 sonar.java.binaries=target/classes
 sonar.java.libraries=target/classes
 sonar.host.url=http://localhost:9000
+sonar.token=
