--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,9 @@ sonar.sources=src
 sonar.java.binaries=target/classes
 sonar.java.libraries=target/classes
 sonar.host.url=http://localhost:9000
-sonar.token=squ_64629622ab9511b7773847e066837d4d8ba56cc0
+sonar.token=${env.SONAR_TOKEN}
+
+// On macOS / Linux terminal run command export once:
+// export SONAR_TOKEN="your_sonar_token"
+// Then use sonar-scanner command as normally
+// sonar-scanner
