--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.java.libraries=target/classes
 sonar.host.url=http://localhost:9000
 sonar.token=${env.SONAR_TOKEN}
 
-// On macOS / Linux terminal run command export once:
+// On macOS / Linux terminal run command export once (keep " "):
 // export SONAR_TOKEN="your_sonar_token"
 // Then use sonar-scanner command as normally
 // sonar-scanner
